@@ -1,3 +1,10 @@
+2001-02-01  Nick Clifton  <nickc@redhat.com>
+
+	* armemu.c (LoadSMult): Update base address register after
+	restoring register bank.
+	(StoreMult): Update base address register after restoring register
+	bank.
+
 2001-01-31  Nick Clifton  <nickc@redhat.com>
 
 	* armvirt.c (PutWord): Detect installation of SWI vector.
